# newsletter_service

./: pyproject.toml
config/: settings.py
